[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Game_Assets/BackButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/download.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Scripts/FadeIn.gd" type="Script" id=4]
[ext_resource path="res://Assets/Game_Assets/Play Button.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MainMenu"]
margin_right = 784.0
margin_bottom = 119.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="MainMenu"]
margin_top = 123.0
margin_right = 784.0
margin_bottom = 398.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MainMenu/CenterRow"]
margin_right = 784.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play" type="TextureButton" parent="MainMenu/CenterRow/Buttons"]
margin_left = 328.0
margin_top = 79.0
margin_right = 456.0
margin_bottom = 143.0
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="MainMenu/CenterRow/Buttons"]
margin_left = 328.0
margin_top = 147.0
margin_right = 456.0
margin_bottom = 196.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="VersionLabel" type="Label" parent="MainMenu"]
margin_top = 402.0
margin_right = 784.0
margin_bottom = 416.0
size_flags_vertical = 1

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fade_in = SubResource( 1 )
[connection signal="pressed" from="MainMenu/CenterRow/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]
